--- a/GameData/SinPhiHeavyIndustries/Patches/SinPhi_TAC-LS.cfg
+++ b/GameData/SinPhiHeavyIndustries/Patches/SinPhi_TAC-LS.cfg
@@ -1,3 +1,6 @@
+// TAC Life Support patch for the 30m Habitat of SinPhiHeavyIndustries by Sin_Phi
+
+// Author: Gordon Dry
 // Inspired by Station Parts Expansion MM Patch by Ryan Montieth Gill who cribbed by Robin "sumghai" Chang
 // Revision: 0.1
 //
@@ -136,7 +139,7 @@
 		StopActionName = #autoLOC_TACLS_00239 //Stop WaterSplitter
 		tag = Life Support		
 		GeneratesHeat = false
-		conversionRate = 9.18
+		conversionRate = 18.87646
 		
 		INPUT_RESOURCE
 		{
