--- a/GameData/SinPhiHeavyIndustries/Parts/Utility/30mHabitat/Centrifuge_30m.cfg
+++ b/GameData/SinPhiHeavyIndustries/Parts/Utility/30mHabitat/Centrifuge_30m.cfg
@@ -7,6 +7,7 @@
 	rescaleFactor = 1
 	node_stack_top = 0.0, 3.75, 0.0, 0.0, 1.0, 0.0, 2
 	node_stack_bottom = 0.0, -3.75, 0.0, 0.0, -1.0, 0.0, 2
+	node_stack_right = -3.0, 0, 0, -1, 0, 0, 2
 	CrewCapacity = 0
 	TechRequired = metaMaterials
 	entryCost = 50000
@@ -29,106 +30,106 @@
 	vesselType = Ship
 	bulkheadProfiles = size2
 
-INTERNAL
-{
-	name = Centrifuge_30m
-}
+	INTERNAL
+	{
+		name = Centrifuge_30m
+	}
 
-RESOURCE
-{
-	name = ElectricCharge
-	amount = 4000
-	maxAmount = 4000
-}
-
-MODULE
-{
-	name = ModuleReactionWheel
-	PitchTorque = 30
-	YawTorque = 30
-	RollTorque = 30
+	MODULE
+	{
+		name = ModuleJettison
+		jettisonName = fairing
+		bottomNodeName = right
+		isFairing = False
+		jettisonedObjectMass = 1
+		jettisonForce = 10
+		jettisonDirection = -1 0 0
+	}
+		
 	RESOURCE
 	{
 		name = ElectricCharge
-		rate = 0.6
+		amount = 4000
+		maxAmount = 4000
 	}
-}
 
-MODULE
-{
-	name = ModuleScienceExperiment	
-	experimentID = crewReport
-	experimentActionName = Crew Report
-	resetActionName = Discard Crew Report
-	reviewActionName = Review Report
-	
-	useStaging = False	
-	useActionGroups = True
-	hideUIwhenUnavailable = True	
-	rerunnable = True
-	
-	xmitDataScalar = 1.0
-}
-
-MODULE
-{
-	name = ModuleGenerator
-	isAlwaysActive = true
-	OUTPUT_RESOURCE
+	MODULE
+	{
+		name = ModuleReactionWheel
+		PitchTorque = 30
+		YawTorque = 30
+		RollTorque = 30
+		RESOURCE
 		{
-	  		 name = ElectricCharge
-	  		 rate = -1.0
-		}	
-}
+			name = ElectricCharge
+			rate = 0.6
+		}
+	}
 
-MODULE
-{
-	name = ModuleScienceContainer
-	
-	reviewActionName = Review Stored Data
-	storeActionName = Store Experiments
-	evaOnlyStorage = True
-	storageRange = 2.0
-}
+	MODULE
+	{
+		name = ModuleScienceExperiment	
+		experimentID = crewReport
+		experimentActionName = Crew Report
+		resetActionName = Discard Crew Report
+		reviewActionName = Review Report
+		
+		useStaging = False	
+		useActionGroups = True
+		hideUIwhenUnavailable = True	
+		rerunnable = True
+		
+		xmitDataScalar = 1.0
+	}
 
-MODULE
-{
-	name = ModuleColorChanger
-	shaderProperty = _EmissiveColor
-	animRate = 0.8
-	animState = false
-	useRate = true
-	toggleInEditor = true
-	toggleInFlight = true
-	toggleInFlight = true
-	unfocusedRange = 5
-	toggleName = #autoLOC_502011 //#autoLOC_502011 = Toggle Lights
-	eventOnName = #autoLOC_502012 //#autoLOC_502012 = Lights On
-	eventOffName = #autoLOC_502013 //#autoLOC_502013 = Lights Off
-	toggleAction = True
-	defaultActionGroup = Light
-	redCurve
+	MODULE
 	{
-		key = 0 0 0 3
-		key = 1 1 0 0
+		name = ModuleScienceContainer
+		
+		reviewActionName = Review Stored Data
+		storeActionName = Store Experiments
+		evaOnlyStorage = True
+		storageRange = 2.0
 	}
-	greenCurve
+
+	MODULE
 	{
-		key = 0 0 0 1
-		key = 1 1 1 0
+		name = ModuleColorChanger
+		shaderProperty = _EmissiveColor
+		animRate = 0.8
+		animState = false
+		useRate = true
+		toggleInEditor = true
+		toggleInFlight = true
+		toggleInFlight = true
+		unfocusedRange = 5
+		toggleName = #autoLOC_502011 //#autoLOC_502011 = Toggle Lights
+		eventOnName = #autoLOC_502012 //#autoLOC_502012 = Lights On
+		eventOffName = #autoLOC_502013 //#autoLOC_502013 = Lights Off
+		toggleAction = True
+		defaultActionGroup = Light
+		redCurve
+		{
+			key = 0 0 0 3
+			key = 1 1 0 0
+		}
+		greenCurve
+		{
+			key = 0 0 0 1
+			key = 1 1 1 0
+		}
+		blueCurve
+		{
+			key = 0 0 0 0
+			key = 1 0.7 1.5 0
+		}
+		alphaCurve
+		{
+			key = 0 1
+		}
 	}
-	blueCurve
-	{
-		key = 0 0 0 0
-		key = 1 0.7 1.5 0
-	}
-	alphaCurve
-	{
-		key = 0 1
-	}
-}
 	
-MODULE
+	MODULE
 	{
 		name = USIAnimation
 		deployAnimationName = Deploy
