--- a/GameData/SinPhiHeavyIndustries/Parts/Electrical/SolarPanels/SolarDisk12.cfg
+++ b/GameData/SinPhiHeavyIndustries/Parts/Electrical/SolarPanels/SolarDisk12.cfg
@@ -1,43 +1,40 @@
-// Sin Phi Heavy Industries
-// Solar Panel - Solar Disk 12
 PART
 {
-	// --- general parameters ---
 	name = SolarDisk12
 	module = Part
 	author = SinPhi
 	mesh = SolarDisk12.mu
 	rescaleFactor = 1
-
-	TechRequired = specializedElectrics
+	node_attach = 0.0, 0.0, 0.0, 0.0, 0.0, 1.0
+	TechRequired = advElectrics
 	entryCost = 15000
 	cost = 20000
-
-	// --- node definitions ---
-	// definition format is Position X, Position Y, Position Z, Up X, Up Y, Up Z
-	node_attach = 0.0, -1.875, 0.0, 1.0, 0.0, 0.0
-
 	category = Electrical
 	subcategory = 0
 	title = Sin Phi Solar Disk 12
 	manufacturer = Sin Phi Heavy Industries
-	description = Solar panel to form a disk with 12 part symetry on a 3.75m core.
-	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
+	description = Description
 	attachRules = 0,1,0,0,1
-
-	// --- standard part parameters ---
 	mass = 0.875
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
 	angularDrag = 1
-	crashTolerance = 7
-	maxTemp = 1200
-
+	crashTolerance = 8
+	maxTemp = 1200 // = 3200
+	bulkheadProfiles = srf
 	thermalMassModifier = 2.0
 	emissiveConstant = 0.95
 	heatConductivity = 0.04 // 1/3 the default
-
+	tags = #autoLOC_500372 //#autoLOC_500372 = array charge deploy e/c elect energ extend generat (light photo power solar sun track unfold volt watt
+	
+	RESOURCE
+	{
+		name = ElectricCharge
+		amount = 175
+		maxAmount = 175
+	}	
+	
 	MODULE
 	{
 		name = ModuleDeployableSolarPanel
@@ -45,8 +42,8 @@ PART
 		animationName = Deploy
 
 		sunTracking = true
-		raycastTransformName = Suncatcher
-		pivotName = pivot
+		raycastTransformName = PanelTop
+		pivotName = HingeMain
 		isBreakable = true
 
 		resourceName = ElectricCharge
