--- a/GameData/SinPhiHeavyIndustries/Parts/Electrical/SolarPanels/SolarDisk12.cfg
+++ b/GameData/SinPhiHeavyIndustries/Parts/Electrical/SolarPanels/SolarDisk12.cfg
@@ -13,7 +13,7 @@ PART
 	subcategory = 0
 	title = Sin Phi Solar Disk 12
 	manufacturer = Sin Phi Heavy Industries
-	description = A fan shapped solar panel for making a disk with 12 part symetry on a 3.75m core.
+	description = Description
 	attachRules = 0,1,0,0,1
 	mass = 0.875
 	dragModelType = default
@@ -43,7 +43,7 @@ PART
 
 		sunTracking = true
 		raycastTransformName = PanelTop
-		pivotName = HingeMain
+		pivotName = Axis
 		isBreakable = true
 
 		resourceName = ElectricCharge
