Updating RDE model and config

--- a/GameData/SinPhiHeavyIndustries/Parts/Engine/RDE_Halberd/RDE_Halberd.cfg
+++ b/GameData/SinPhiHeavyIndustries/Parts/Engine/RDE_Halberd/RDE_Halberd.cfg
@@ -9,10 +9,10 @@
 	node_stack_bottom = 0.0,0.0, 0.0, 0.0, -1.0, 0.0
 	CoMOffset = 0.0, 2.5, 0.0
 	mass = 2.25
-	thermalMassModifier = 1.5
+	thermalMassModifier = 1.25
 	skinMassPerArea = 2
-	emissiveConstant = 0.95
-	heatConductivity = 0.24
+	emissiveConstant = 0.85
+	heatConductivity = 0.18
 	skinInternalConductionMult = 4.0
 	emissiveConstant = 0.8 // engine nozzles are good at radiating.
 	dragModelType = default
@@ -23,7 +23,7 @@
 	maxTemp = 2000 // = 3600
 	TechRequired = aerospaceTech
 	entryCost = 52500
-	cost = 9000
+	cost = 11500
 	category = Engine
 	subcategory = 0
 	title = RDE-7 H.A.L.B.E.R.D Engine
@@ -60,11 +60,27 @@
 	RESOURCE
 	{
 		name = LiquidFuel
-		amount = 50
-		maxAmount = 50
+		amount = 60
+		maxAmount = 60
 	}
 	
 	MODULE
+	{
+		name = ModuleAlternator	
+		RESOURCE
+		{
+			name = ElectricCharge
+			rate = 5
+		}
+	}
+	RESOURCE
+	{
+		name = ElectricCharge
+		amount = 120
+		maxAmount = 120
+		isTweakable = false
+		hideFlow = true
+	}
 	
 	EFFECTS
 	{
@@ -184,6 +200,7 @@
 			}
 		}
 	}
+	
 	MODULE
 	{
 		name = MultiModeEngine
@@ -192,6 +209,7 @@
 		secondaryEngineID = ClosedCycle
 		secondaryEngineModeDisplayName = ClosedCycle
 	}
+	
 	MODULE
 	{
 		name = ModuleEnginesFX
@@ -244,16 +262,16 @@
 			key = 0.2 0.98 0.42074 0.42074
 			key = 0.7 1.8 2.290406 2.290406
 			key = 1.4 4.00 3.887193 3.887193
-			key = 3.75 8.5 0 0
-			key = 4.5 7.3 -2.831749 -2.831749
-			key = 5.5 3 -5.260566 -5.260566
-			key = 6 0 -0.02420209 0
+			key = 4.0 8.5 0 0
+			key = 4.875 7.3 -2.831749 -2.831749
+			key = 6.0 3 -5.260566 -5.260566
+			key = 7.0 0 -0.02420209 0
 		}
 		atmCurve
 		{
 			// higher thrust at altitude than even TRJ
 			key = 0 0 0 0
-			key = 0.018 0.1 7.914787 7.914787
+			key = 0.015 0.1 7.914787 7.914787
 			key = 0.08 0.35 1.051923 1.051923
 			key = 0.35 0.6 0.3927226 0.3927226
 			key = 1 1 1.055097 0
@@ -302,13 +320,14 @@
 //		dependOnThrottle = True
 //		preferMultiMode = True // bind to the parent multimode module, not the actual engines.
 //	}
+
 	MODULE
 	{
 		name = ModuleGimbal
 		gimbalTransformName = Gimbal
-		gimbalRange = 5
-	}gimbalRange = 5
+		gimbalRange = 3
 	}
+	
 	MODULE
 	{
 		name = ModuleTestSubject
