Switched model to more compact 2.5m length

--- a/GameData/SinPhiHeavyIndustries/Parts/Engine/RDE_Halberd/RDE_Halberd.cfg
+++ b/GameData/SinPhiHeavyIndustries/Parts/Engine/RDE_Halberd/RDE_Halberd.cfg
@@ -2,33 +2,32 @@
 {
 	name = RDE_Halberd
 	module = Part
-	author = Troy Owens
+	author = Troy Owens, Sin Phi
 	mesh = RDE_Halberd.mu
 	rescaleFactor = 1
-	node_stack_top = 0.0,3.0,0.0 , 0.0, 1.0, 0.0
+	node_stack_top = 0.0,2.5,0.0 , 0.0, 1.0, 0.0
 	node_stack_bottom = 0.0,0.0, 0.0, 0.0, -1.0, 0.0
-	CoMOffset = 0.0, 2.5, 0.0
+	CoMOffset = 0.0, 2.0, 0.0
 	mass = 2.25
 	thermalMassModifier = 1.25
 	skinMassPerArea = 2
-	emissiveConstant = 0.85
+	emissiveConstant = 0.8
 	heatConductivity = 0.18
-	skinInternalConductionMult = 4.0
-	emissiveConstant = 0.8 // engine nozzles are good at radiating.
+	skinInternalConductionMult = 2.0
+	maxTemp = 2000 // = 3600
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
 	angularDrag = 2
 	crashTolerance = 20
-	maxTemp = 2000 // = 3600
 	TechRequired = aerospaceTech
 	entryCost = 52500
 	cost = 11500
 	category = Engine
 	subcategory = 0
-	title = RDE-7 H.A.L.B.E.R.D Engine
+	title = RDE-6 H.A.L.B.E.R.D Engine
 	manufacturer = Sin Phi Heavy Industries
-	description = The H.A.L.B.E.R.D. (High Altitude Liquid-oxidizer/air-Breathing Engine for Rocket Detonation) might appear to be a minor advancment on hiybrid mix mode engines, however it has much more boom. It is a RDE (Rotating Detonation Engine) with 6 combustors, each with a vortex of detonation fronts, giving it incredible efficiency and power. It is able to act air-breathing or rocket modes.
+	description = The H.A.L.B.E.R.D. (High Altitude Liquid Breathing Engine with Rotating Detonation) might appear to be a minor advancment on hybrid mix mode engines, however it has much more boom. It is a RDE (Rotating Detonation Engine) with 6 combustors, each with a vortex of detonation fronts, giving it incredible efficiency and power. It is able to act in air-breathing or rocket modes.
 	attachRules = 1,0,1,1,0
 	bulkheadProfiles = size1
 	tags = aircraft ascent closed cycle dual fuel hybrid jet liquid main mode plane propuls halberd rocket ssto
