Adding CTT support and finalizing Halberd

--- a/GameData/SinPhiHeavyIndustries/Parts/Engine/RDE_Halberd/RDE_Halberd.cfg
+++ b/GameData/SinPhiHeavyIndustries/Parts/Engine/RDE_Halberd/RDE_Halberd.cfg
@@ -27,7 +27,7 @@
 	subcategory = 0
 	title = RDE-6 H.A.L.B.E.R.D Engine
 	manufacturer = Sin Phi Heavy Industries
-	description = The H.A.L.B.E.R.D. (High Altitude Liquid Breathing Engine with Rotating Detonation) might appear to be a minor advancment on hybrid mix mode engines, however it has much more boom. It is a RDE (Rotating Detonation Engine) with 6 combustors, each with a vortex of detonation fronts, giving it incredible efficiency and power. It is able to act in air-breathing or rocket modes.
+	description = The H.A.L.B.E.R.D. (High Altitude Liquid Breathing Engine with Rotating Detonation) might appear to be a minor advancment on combined cycle engines, however it has much more boom. It is a RDE (Rotating Detonation Engine) with 6 combustors, each with a vortex of detonation fronts, giving it incredible efficiency and power. It is able to act in air-breathing or rocket modes.
 	attachRules = 1,0,1,1,0
 	bulkheadProfiles = size1
 	tags = aircraft ascent closed cycle dual fuel hybrid jet liquid main mode plane propuls halberd rocket ssto
